--- a/chromeExtensions/couponDunia/ReadMe
+++ b/chromeExtensions/couponDunia/ReadMe
@@ -1,3 +1,4 @@
+------------------ Get latest Coupons From couponDunia With help of this Website ------------------------
 A simple chrome extension which pulls off data from CouponDunia.in to show the latest coupons and deals 
 available ,corresponding to the merchant's site which is currenly open in a tab.
 
